students/RabchenyaMaksim/task_02/src/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web39
  namespace: app39
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web39
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web39
    spec:
      containers:
        - name: web
          image: frosyka/lr01-go:v39
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8003
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8003
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 10

          resources:
            requests:
              cpu: "150m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
