students/RabchenyaMaksim/task_02/src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web39
  namespace: app39
spec:
  type: ClusterIP
  selector:
    app: web39
  ports:
    - port: 80
      targetPort: 8003
